# what2_decorate

./: .darglint  .gitignore  README.md  pyproject.toml  tasks.py
src/what2_decorate/: __init__.py  decdec.py  init.py  wrap.py
tests/: __init__.py  test_dek.py  test_init.py
