[project]
name = "what2-decorate"
version = "0.1.0"
description = "What2 Decorate"
authors = [
    {name = "Marc Edwards", email = "marc@mlwhat.com"}
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/alwaysmpe/decorate"
Repository = "https://github.com/alwaysmpe/decorate"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = """\
--doctest-modules \
--doctest-ignore-import-errors \
--ignore=tasks.py \
--tb=short \
"""

[tool.pyright]

pythonVersion = "3.13"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportImplicitOverride = true
typeCheckingMode  = "strict"
exclude = [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
    "tasks.py",
]
ignore =  [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
]

[tool.ruff]

line-length = 160
indent-width = 4
target-version = "py313"
exclude = [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
    "tasks.py",
    "exp.py",
]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]

preview = true
select = [
    "ALL",
    # aren't selected by all due to conflicts
    "D213",
    "D215",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D408",
    "D409",
    "D410",
    "D411",
    "D417",
]

ignore = [
    "FIX002",
    "TC001",
    "TC002",
    "TC003",
    "TD003",
    "S101",
    "CPY001",
    "D105",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D401",
    "D412",
    "DOC201",
    "E261",
    "TD002",
    "TRY002",
    "TRY003",
    "FIX001",
    "FIX003",
    "FIX004",
    "RET503",
    "RET504",
    "PD901",
    "SIM108",
    "PLW1641", # implement eq without hash - what if it's mutable?
    "PYI025", # import Set as AbstractSet - No.
]

[tool.ruff.lint.per-file-ignores]

"tests/*" = [
    "D",
    "DOC",
    "ANN",
    "PLR2004",
    "S404",
    "S603",
    "T201",
    "FBT003",
]

[tool.ruff.lint.flake8-quotes]

avoid-escape = false
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]

ban-relative-imports = "all"

[tool.ruff.lint.isort]

force-sort-within-sections = true
forced-separate = ["what2*", "tests", "pytest", "_pytest"]

[tool.ruff.lint.pydocstyle]

convention = "pep257"

[tool.pylama]

ignore = "E261,C901,E741"


skip = """\
*.ipynb_checkpoints/*,\
"""

max_line_length = 160

format = "pylint"

[tool.pdm]
distribution = true


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-order>=1.3.0",
    "pytest-gitignore>=1.3",
    "setuptools>=75.2.0",
    "toml>=0.10.2",
    "what2>=0.3.3",
    "basedpyright",
    "ruff",
    "pylama",
    "darglint2",
]
